WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
205986
Fullscreen videos do not enter PiP in first tap
https://bugs.webkit.org/show_bug.cgi?id=205986
Summary
Fullscreen videos do not enter PiP in first tap
Peng Liu
Reported
2020-01-08 21:31:31 PST
Fullscreen videos do not enter PiP in first tap
Attachments
Patch
(2.57 KB, patch)
2020-01-08 21:44 PST
,
Peng Liu
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Peng Liu
Comment 1
2020-01-08 21:43:12 PST
<
rdar://problem/58384092
>
Peng Liu
Comment 2
2020-01-08 21:44:42 PST
Created
attachment 387190
[details]
Patch
WebKit Commit Bot
Comment 3
2020-01-09 12:08:30 PST
Comment on
attachment 387190
[details]
Patch Clearing flags on attachment: 387190 Committed
r254287
: <
https://trac.webkit.org/changeset/254287
>
WebKit Commit Bot
Comment 4
2020-01-09 12:08:32 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug