Cherry-pick r254287. rdar://problem/58552886

Fullscreen videos do not enter PiP in first tap
    https://bugs.webkit.org/show_bug.cgi?id=205986

    Reviewed by Eric Carlson.

    This patch essentially reverts the fix for webkit.org/b/204461.
    The fix for webkit.org/b/204461 depends on a fix in AVKit along
    with a corresponding update in WebKit (webkit.org/b/204979).
    We will need to reapply the fix for webkit.org/b/204461 after they are landed.

    * WebProcess/cocoa/VideoFullscreenManager.mm:
    (WebKit::VideoFullscreenManager::enterVideoFullscreenForVideoElement):
    (WebKit::VideoFullscreenManager::exitVideoFullscreenForVideoElement):

    Canonical link: https://commits.webkit.org/219136@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@254287 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/218903.43@safari-609-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-609-branch@254607 268f45cc-cd09-0410-ab3c-d52691b4dbfc